hphp/hack/test/typecheck/case/test_case_collision.php.exp
File "test_case_collision.php", line 8, characters 3-65:
Redeclared method A::FOO (Parsing[1002])
